Bug #40116 --> check to see if the channel was canceled before propogating calls to the content listener... r=valeski